// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline english inline span in persian service article 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  color: #3F3F42;
  font-family: NassimPersian,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<span
  className="c0"
>
  This is text in a Inline.
</span>
`;

exports[`Inline persian inline span in english service article 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<span
  className="c0"
>
  بعض محتوى النص
</span>
`;
